fix: no left-pad on small screen

--- a/coffee-house/css/general.css
+++ b/coffee-house/css/general.css
@@ -101,7 +101,7 @@ body {
 .main-container {
   display: flex;
   flex-direction: column;
-  padding: 20px 16px 16px 0px;
+  padding: 20px 16px 0px 16px;
   max-width: 1440px;
   margin-inline: auto;
 }
